<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ToDoItemActivity"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_todo_item"
            android:textColor="@color/white"
            android:background="@color/black"
            android:padding="30dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="italic" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColorHint="@color/black"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/todoItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/todoItemDate"
            android:textAlignment="center"
            android:padding="30dp"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_margin="20dp"
            app:cornerRadius="20dp"
            android:gravity="center"
            android:text="@string/choose_date" />
        <Button
            android:id="@+id/todoItemTime"
            android:textAlignment="center"
            android:padding="30dp"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_margin="20dp"
            android:gravity="center"
            app:cornerRadius="20dp"
            android:text="@string/choose_time"/>
    </LinearLayout>

    <Button
        android:id="@+id/todoItemAdd"
        android:textAlignment="center"
        android:padding="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_margin="20dp"
        app:cornerRadius="200dp"
        android:text="@string/add"/>
</LinearLayout>